syntax = "proto3";

package auth;

option go_package = "./pb";

service AuthService {
    rpc Login (Credentials) returns (AuthStatus) {}
    rpc Logout (Token) returns (AuthStatus) {}
    rpc CheckAuth (Token) returns (AuthStatus) {}
    rpc CreateUser (Credentials) returns (AuthStatus) {}
}

message Credentials {
    string username = 1;
    string password = 2;
    string lastLogged = 3;
}

message Token {
    string encodedJWT = 1;
}

message AuthStatus {
    bool isLoggedIn = 1;
    string timeToExpire = 2;
    Token jwt = 3;
}